--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-cost-explorer": "^3.31.0",
     "@line/bot-sdk": "^7.3.0"
   }
 }
